# numoria

./: .gitignore  AUTHORS.numoria  CHANGELOG.numoria.md  CMakeLists.txt  README.numoria.md
.github/: README.md
cmake/: CMakeOptions.cmake  CompileDefinitions.cmake  CompilerFlags.cmake  InstallConfiguration.cmake  LibraryConfiguration.cmake  PackConfiguration.cmake
cmake/ExternalProjects/: PDCursesMod.cmake
data/: help_wizard.txt  rl_help_wizard.txt  splash.txt.in  version.h.in  versions.txt.in
src/: browser_curses.cpp  browser_curses.h  browser_io.js  color.cpp  color.h  config.cpp  config.h  curses.h  data_tables.cpp  dungeon.cpp  dungeon.h  game.cpp  game_files.cpp  game_run.cpp  game_save.cpp  headers.h  identification.h  inventory.cpp  inventory.h  monster.cpp  monster.h  monster_manager.cpp  numoria.html  player_move.cpp  recall.cpp  scrolls.cpp  spells.cpp  store.cpp  store.h  ui_inventory.cpp  ui_io.cpp  wizard.cpp  wizard.h
unoff-patches/: FT-intrinsic-light.diff  README  auto-haggle.diff  buy-sell-any-number.diff  cancel-WoR.diff  fix-buffer-overflows.diff  fix-buffer-overflows.readme  fix-inscription-length.diff  fix-inscription-length.readme  fix-tried-inscription.diff  fix-tried-inscription.readme  linux-glibc2-build.diff  lost-items-feedback.diff  promote-mage-books.diff  quick-messages.diff  randomize-food-theft.diff
